fixing pagination align

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -69,7 +69,7 @@ h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover{
     color: @color_three;
     display: block;
     float: left;
-    line-height: 40px;
+    line-height: 29px;
 }
 .module h1,.moduletable h1,.moduletext h1,
 .module h2,.moduletable h2,.moduletext h2,
